<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="P_LoadCell" Id="{be0f4449-fc17-4661-8825-a030f0a0ac13}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P_LoadCell
VAR CONSTANT
	CnMaxIdxFb: UDINT:= 1;	(*Max number of EL3351 terminals*)
END_VAR
VAR
(*+++++ Errors and Status +++++*)
	bFieldbusOK: BOOL;
	sFieldBusStatus: STRING;
	bAllTerminalsOK: BOOL;
	sAllTerminalsStatus: STRING(255);
	dwAllTerminalsStatus: DWORD;
(*+++++ Buttons in Visu +++++*)
	bShowRGB: BOOL;
	bQuestionMarkFieldbusError: BOOL:= 0;
	dwButtonColour: DWORD:= 16#00F0F0F0;
(*+++++ FBs +++++*)
	fbGetTime: FB_Get_Time;
	fbEtherCATDiagnosis: FB_EtherCAT_Diagnosis_Master;
	fbColours: FB_Colours;
(*+++++ Number of Instances of EL3351 +++++*)
	astDeviceStatus: ARRAY[1..CnMaxIdxFb] OF ST_DeviceStatus;
	afbEL3351: ARRAY[1..CnMaxIdxFb] OF FB_EL3351;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[(*これは、Beckhoff EL3351 EtherCatデバイスの例プログラムです。EL3351は1チャンネル抵抗ブリッジ端子です。
このプログラムは何ができるのでしょうか？
まず第一に、このプログラムは、ひずみゲージ（ロードセル）の適用された負荷を評価できます。 測定関数のコードは、functionblock fb_el3351_measuringにあります。
すべてのパラメーターは、視覚化の最初のページに表示されます。 定格出力とデバイスに接続されているロードセルの定格容量が入力されると、プログラムはロードセルに適用される重みを計算します。
また、接続された荷重セルの定格出力とゼロバランスを自動的に見つけることもできます。 したがって、キャリブレーションモードを有効にする必要があり、指示に従う必要があります。

視覚化の2番目のページでは、一部のCOEパラメーターを読み取りおよび調整できます。

このプログラムでは、2つの興味深い関数が使用されています。
関数CheckDivrealは、除数の値がゼロかどうかをチェックします。 その場合、除数は1に設定されています。
詳細については、CheckDivreal（Fun）およびFB_Checkdivrealinfoを参照してください。

function checkboundsは、範囲外のインデックスが配列にアクセスされているかどうかを確認します。 その場合、インデックスは、最高宣言されたインデックス（インデックスが高い場合にアクセスされている場合）または最低宣言されたインデックス（インデックス低いインデックスがアクセスされている場合）のいずれかに自動的に設定されます。 詳細については、CheckBounds（Fun）およびFB_Checkarrayboundsを参照してください。

+++++++++++ !!!!!!!!!!!++++++++++ !!!! !!! +++++++++++ !!!!!!!!!!!++++++++++ !!!! !!!!!!!!!!!
注：CheckBounds関数とCheckDivreal関数は、システム負荷の増加を引き起こす可能性があります。 システムの負荷を減らしたい場合は、ビルドから機能を除外できます。
したがって、CheckBounds（Fun）および/またはCheckDivreal（Fun）で右のKlickを選択し、「ビルドから除外」を選択します。
+++++++++++ !!!!!!!!!!!++++++++++ !!!! !!! +++++++++++ !!!!!!!!!!!++++++++++ !!!! !!!!!!!!!!! *)

(*Showing the System Time in the Visu*)

fbGetTime(sDateAndTime=> );

fbColours();

(*EtherCAT Diagnosis*)
fbEtherCATDiagnosis(	bFieldbusOK=> bFieldbusOK,
					sFieldBusStatus=> sFieldBusStatus);

(*Instances for each EL3351 terminal*)
afbEL3351[1]( bEnable:= TRUE,			(*The first device is enabled by default, the others can be activated and deactivated in the Visu*)
			nTerminalNr:= 1,
			bUseVisuInputs:= TRUE,	(*If FALSE, Rated Output, Rated Capacity and Zero Balance can be forced here and no Inputs must be made in the Visu*)
			rForcedRatedOutput:=  ,	(*Rated Output of the used Load cell in mV/V, used if bUseVisuInputs = FALSE *)
			rForcedRatedCapacity:=  ,	(*Rated Capacity of the used Load cell in kg, used if bUseVisuInputs= FALSE*)
			rForcedZeroBalance:= ,	(*Zero Balance of the used load cell in mV/V, used if bUseVisuInputs= FALSE*)
			bDeviceOk=>astDeviceStatus[1].bDeviceOK ,
			sDeviceStatus=> astDeviceStatus[1].sDeviceStatus,
			rUref=> ,
			rUdiff=> ,
			rGrossWeight=> ,
			rNetWeight=> , 
			rTareWeight=> );



IF astDeviceStatus[1].bDeviceOK THEN
	bAllTerminalsOK:= TRUE;
	dwAllTerminalsStatus:= 16#0000FF00;
	sAllTerminalsStatus:= 'All Terminals OK';
ELSE
	bAllTerminalsOK:= FALSE;
	dwAllTerminalsStatus:= 16#000000FF;
	sAllTerminalsStatus:= 'Error has occured at Terminal No ';
	sAllTerminalsStatus:= CONCAT(sAllTerminalsStatus, astDeviceStatus[1].sDeviceStatus);	(*If Device has no error, sDeviceStatus is an empty String*)
END_IF]]></ST>
    </Implementation>
    <LineIds Name="P_LoadCell">
      <LineId Id="141" Count="16" />
      <LineId Id="43" Count="0" />
      <LineId Id="161" Count="0" />
      <LineId Id="44" Count="0" />
      <LineId Id="184" Count="0" />
      <LineId Id="45" Count="21" />
      <LineId Id="69" Count="0" />
      <LineId Id="81" Count="10" />
      <LineId Id="93" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>